--- a/templates/editModel.html
+++ b/templates/editModel.html
@@ -6,19 +6,19 @@
     </div>
     <div class="row banner menu">
         <div class="col-md-11 col-md-offset-1 padding-none">
-            <h1>Edit {{style.name}}</h1>
+            <h1>Edit {{model.name}}</h1>
         </div>
     </div>
     <div class="row">
         <div class="col-md-6 col-md-offset-1 padding-top">
-            <form action="{{ url_for('editStyle',style_id = style.id)}}" method = "post">
+            <form action="{{ url_for('editModel', style_id = style_id, model_id = model.id)}}" method = "post">
                 <div class="form-group">
                     <label for="name">Name:</label>
-                    <input type ="text" class="form-control" name="name" value="{{style.name }}">
+                    <input type ="text" class="form-control" name="name" value="{{model.name }}">
                     <div class="padding-bottom"></div>
                     <button type="submit" class="btn btn-default" id="submit" type="submit">
                     <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Save</button>
-                    <a href = '{{url_for('showStyles')}}'>
+                    <a href = '{{url_for('showModels', style_id = style_id)}}'>
                         <button class="btn btn-default delete">
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
                     </a>
