--- a/templates/editModel.html
+++ b/templates/editModel.html
@@ -4,21 +4,29 @@
     <div class="row divider green">
         <div class="col-md-12"></div>
     </div>
-    <div class="row banner menu">
-        <div class="col-md-11 col-md-offset-1 padding-none">
-            <h1>Edit {{model.name}}</h1>
-        </div>
-    </div>
+
+    {% include "breadcumb-level2.html" %}
+
     <div class="row">
         <div class="col-md-6 col-md-offset-1 padding-top">
-            <form action="{{ url_for('editModel', style_id = style_id, model_id = model.id)}}" method = "post">
+            <form action="{{ url_for('editModel', style_id = style.id, model_id = model.id)}}" method = "post">
                 <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type ="text" class="form-control" name="name" value="{{model.name }}">
+                    <div class="input-group">
+                        <span class="input-group-addon">Name</span>
+                        <input type ="text" class="form-control" name="name" value="{{model.name }}">
+                    </div>
+                    <!-- <label for="name">Name:</label> -->
+                    <label for="description">Description:</label>
+                    <input type ="text" class="form-control" name="description" value="{{model.description }}">
+                    <label for="price">Price:</label>
+                    <input type ="text" class="form-control" name="price" value="{{model.price }}">
+                    <label for="Power">Power:</label>
+                    <input type ="text" class="form-control" name="power" value="{{model.power }}">
+
                     <div class="padding-bottom"></div>
                     <button type="submit" class="btn btn-default" id="submit" type="submit">
                     <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Save</button>
-                    <a href = '{{url_for('showModels', style_id = style_id)}}'>
+                    <a href = "{{url_for('showModels', style_id = style.id)}}">
                         <button class="btn btn-default delete">
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
                     </a>
