--- a/templates/editStyle.html
+++ b/templates/editStyle.html
@@ -4,6 +4,7 @@
     <div class="row divider green">
         <div class="col-md-12"></div>
     </div>
+    {% include "breadcumb-level1.html" %}
     <div class="row banner menu">
         <div class="col-md-11 col-md-offset-1 padding-none">
             <h1>Edit {{style.name}}</h1>
@@ -18,7 +19,7 @@
                     <div class="padding-bottom"></div>
                     <button type="submit" class="btn btn-default" id="submit" type="submit">
                     <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Save</button>
-                    <a href = '{{url_for('showStyles')}}'>
+                    <a href = "{{url_for('showStyles')}}">
                         <button class="btn btn-default delete">
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
                     </a>
