--- a/templates/models.html
+++ b/templates/models.html
@@ -4,11 +4,8 @@
     <div class="row divider green">
         <div class="col-md-12"></div>
     </div>
-    <div class="row banner menu">
-        <div class="col-md-11 col-md-offset-1 padding-none">
-            <h1>{{ style.name }}</h1>
-        </div>
-    </div>
+
+    {% include "breadcumb-level1.html" %}
 
     <div class="row padding-top padding-bottom">
         <div class="col-md-1"></div>
