--- a/templates/newModel.html
+++ b/templates/newModel.html
@@ -4,6 +4,7 @@
 	<div class="row divider green">
 		<div class="col-md-12"></div>
 	</div>
+    {% include "breadcumb-level1.html" %}
 	<div class="row banner menu">
 		<div class="col-md-11 col-md-offset-1 padding-none">
 			<h1>New Model</h1>
