--- a/templates/newStyle.html
+++ b/templates/newStyle.html
@@ -1,6 +1,7 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
+{% include "breadcumb-level0.html" %}
     <div class="row divider green">
         <div class="col-md-12"></div>
     </div>
