--- a/templates/styles.html
+++ b/templates/styles.html
@@ -1,6 +1,7 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
+
     <div class="row top-menu">
         <div class="col-md-10"></div>
         <div class="col-md-2 text-right"></div>
@@ -8,12 +9,8 @@
     <div class="row divider blue">
         <div class="col-md-12"></div>
     </div>
-    <div class="row banner main">
-        <div class="col-md-1"></div>
-        <div class="col-md-11 padding-none">
-            <h1>Styles</h1>
-        </div>
-    </div>
+
+    {% include "breadcumb-level0.html" %}
 
     <div class = 'flash'>
         {% with messages = get_flashed_messages() %}
@@ -39,7 +36,7 @@
         </div>
         <div class="col-md-1"></div>
     </div>
-    
+
     {% for style in styles %}
         <div class="row">
             <div class="col-md-1"></div>
