Added images to the database and owner_required function decorator

--- a/templates/modelInfo.html
+++ b/templates/modelInfo.html
@@ -34,6 +34,9 @@
                 <li><strong>Description: </strong> {{model.description}}</li>
                 <li><strong>Price: </strong> {{model.price}} €</li>
                 <li><strong>Power: </strong> {{model.power}} CV</li>
+                <li>
+                    <img class="img-responsive" src="{{model.image}}" alt="{{model.name}} image">
+                </li>
             </ul>
         </div>
         <div class="col-md-1"></div>
