--- a/templates/editModel.html
+++ b/templates/editModel.html
@@ -13,15 +13,19 @@
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-addon">Name</span>
-                        <input type ="text" class="form-control" name="name" value="{{model.name }}">
+                        <input type="text" class="form-control" name="name" value="{{model.name }}">
                     </div>
-                    <!-- <label for="name">Name:</label> -->
                     <label for="description">Description:</label>
-                    <input type ="text" class="form-control" name="description" value="{{model.description }}">
+                    <input type="text" class="form-control" name="description" value="{{model.description }}">
                     <label for="price">Price:</label>
-                    <input type ="text" class="form-control" name="price" value="{{model.price }}">
+                    <input type="text" class="form-control" name="price" value="{{model.price }}">
                     <label for="Power">Power:</label>
-                    <input type ="text" class="form-control" name="power" value="{{model.power }}">
+                    <input type="text" class="form-control" name="power" value="{{model.power }}">
+
+                    <div class="input-group">
+                        <span class="input-group-addon">Image</span>
+                        <input type="text" class="form-control" name="image" value="{{model.image }}">
+                    </div>
 
                     <div class="padding-bottom"></div>
                     <button type="submit" class="btn btn-default" id="submit" type="submit">
