--- a/templates/newModel.html
+++ b/templates/newModel.html
@@ -1,36 +1,40 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-	<div class="row divider green">
-		<div class="col-md-12"></div>
-	</div>
+    <div class="row divider green">
+        <div class="col-md-12"></div>
+    </div>
     {% include "breadcumb-level1.html" %}
-	<div class="row banner menu">
-		<div class="col-md-11 col-md-offset-1 padding-none">
-			<h1>New Model</h1>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-6 col-md-offset-1 padding-top">
-			<form action="#" method = "post">
-				<div class="form-group">
-					<label for="name">Name:</label>
-					<input type ="text" maxlength="50" class="form-control" name="name"placeholder="Name of the Model">
+    <div class="row banner menu">
+        <div class="col-md-11 col-md-offset-1 padding-none">
+            <h1>New Model</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-1 padding-top">
+            <form action="#" method = "post">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type ="text" maxlength="50" class="form-control" name="name"placeholder="Name of the Model">
 
-					<label for="description">Description:</label>
-					<textarea class="form-control" maxlength="250" rows="3" name="description" placeholder="Description of the Bike"></textarea>
+                    <label for="description">Description:</label>
+                    <textarea class="form-control" maxlength="250" rows="3" name="description" placeholder="Description of the Bike"></textarea>
 
-					<label for="price">Price:</label>
-					<div class="input-group">
-						<div class="input-group-addon">$</div>
-						<input type ="text" class="form-control" maxlength="10" name="price" placeholder="Price in $">
-					</div>
-					<label for="power">Power:</label>
-				    <input type ="text" maxlength="10" class="form-control" name="power"placeholder="Horsepower (CV)">
-					<button type="submit" class="btn btn-default" id="submit" type="submit">
-					<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Create</button>
-				</div>
-			</form>
-		</div>
-	</div>
+                    <label for="price">Price:</label>
+                    <div class="input-group">
+                        <div class="input-group-addon">$</div>
+                        <input type ="text" class="form-control" maxlength="10" name="price" placeholder="Price in $">
+                    </div>
+                    <label for="power">Power:</label>
+                    <input type ="text" maxlength="10" class="form-control" name="power"placeholder="Horsepower (CV)">
+
+                    <label for="name">Image URL:</label>
+                    <input type ="text" maxlength="500" class="form-control" name="image"placeholder="URL for the Model Image">
+
+                    <button type="submit" class="btn btn-default" id="submit" type="submit">
+                    <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Create</button>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
