--- a/templates/editStyle.html
+++ b/templates/editStyle.html
@@ -1,24 +1,22 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-    <div class="row divider green">
-        <div class="col-md-12"></div>
-    </div>
+
     {% include "breadcumb-level1.html" %}
     <div class="row banner menu">
         <div class="col-md-11 col-md-offset-1 padding-none">
-            <h1>Edit {{style.name}}</h1>
+
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 col-md-offset-1 padding-top">
+        <div class="col-md-12">
+            <h3>Edit {{style.name}}</h3>
             <form action="{{ url_for('editStyle',style_id = style.id)}}" method = "post">
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
-                
+
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type ="text" class="form-control" name="name" value="{{style.name }}">
-                    <div class="padding-bottom"></div>
                     <button type="submit" class="btn btn-default" id="submit" type="submit">
                     <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Save</button>
                     <a href = "{{url_for('showStyles')}}">
