--- a/templates/login.html
+++ b/templates/login.html
@@ -2,20 +2,8 @@
 {% block content %}
 {% include "header.html" %}
 
-    <div class = 'flash'>
-        {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                <ul>
-                {% for message in messages %}
-                    <li> <strong> {{ message }} </strong> </li>
-                {% endfor %}
-                </ul>
-            {% endif %}
-        {% endwith %}
-    </div>
-
     <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-12">
             <div id="signInButton">
                 <span class="g-signin"
                     data-scope="openid email"
@@ -46,7 +34,7 @@
                             success: function(result) {
                                 // Handle or verify the server response if necessary.
                                 if (result) {
-                                    $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+                                    $('#result').html(result)
                                     setTimeout(function() {
                                         window.location.href = "{{url_for('showStyles')}}";
                                     }, 4000);
