--- a/templates/main.html
+++ b/templates/main.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script src="//apis.google.com/js/platform.js?onload=start"> </script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet'>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script src="//apis.google.com/js/platform.js?onload=start"></script>
 
     </head>
     <body>
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="{{url_for('showStyles')}}">
+                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Show All Styles
+                </a>
+                <p class="navbar-text navbar-right">
+                    {% if 'username' in session %}
+                        <a href="{{url_for('gdisconnect')}}">Logout</a>
+                    {% else %}
+                        <a href="{{url_for('showLogin')}}">Login</a>
+                    {% endif %}
+                </p>
+            </div>
+        </nav>
         <div class="container">
             {% block content %}
             {% endblock %}
