--- a/templates/newModel.html
+++ b/templates/newModel.html
@@ -1,17 +1,12 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-    <div class="row divider green">
-        <div class="col-md-12"></div>
-    </div>
+
     {% include "breadcumb-level1.html" %}
-    <div class="row banner menu">
-        <div class="col-md-11 col-md-offset-1 padding-none">
-            <h1>New Model</h1>
-        </div>
-    </div>
+
     <div class="row">
-        <div class="col-md-6 col-md-offset-1 padding-top">
+        <div class="col-md-12">
+            <h3>New Model</h3>
             <form action="#" method = "post">
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
                 <div class="form-group">
@@ -33,7 +28,8 @@
                     <input type ="text" maxlength="500" class="form-control" name="image"placeholder="URL for the Model Image">
 
                     <button type="submit" class="btn btn-default" id="submit" type="submit">
-                    <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Create</button>
+                        <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Create
+                    </button>
                 </div>
             </form>
         </div>
