--- a/templates/deleteModel.html
+++ b/templates/deleteModel.html
@@ -1,20 +1,27 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-{% include "breadcumb-level2.html" %}
-<h2> Are you sure you want to delete {{model.name}}? </h2>
 
-<form action="#" method = 'post'>
+    {% include "breadcumb-level2.html" %}
 
-    <button type="submit" class="btn btn-default delete" id="submit" type="submit">
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
-    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete</button>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <h3> Are you sure you want to delete {{model.name}}? </h3>
 
+            <form action="#" method = 'post'>
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
 
-</form>
-<a href = '{{url_for('showModels', style_id = style.id)}}'>
-    <button class="btn btn-default delete">
-    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
-</a>
+                <div class="form-group pull-right">
+                    <a class="btn btn-default btn-danger" href="{{url_for('showModels', style_id = style.id)}}">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel
+                    </a>
+
+                    <button type="submit" class="btn btn-success" id="submit" type="submit">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 
 {% endblock %}
