--- a/templates/deleteStyle.html
+++ b/templates/deleteStyle.html
@@ -2,21 +2,27 @@
 {% block content %}
 {% include "header.html" %}
 
-{% include "breadcumb-level1.html" %}
+    {% include "breadcumb-level1.html" %}
 
-<h2> Are you sure you want to delete {{style.name}}? </h2>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <h3> Are you sure you want to delete {{style.name}}? </h3>
 
-<form action="#" method = 'post'>
+            <form action="#" method = 'post'>
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
 
-    <button type="submit" class="btn btn-default delete" id="submit" type="submit">
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
-    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete</button>
+                <div class="form-group pull-right">
+                    <a class="btn btn-default btn-danger" href="{{url_for('showStyles')}}">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel
+                    </a>
 
+                    <button type="submit" class="btn btn-success">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete
+                    </button>
+                </div>
 
-</form>
-<a href = '{{url_for('showStyles')}}'>
-    <button class="btn btn-default delete">
-    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
-</a>
+            </form>
+        </div>
+    </div>
 
 {% endblock %}
