--- a/templates/editModel.html
+++ b/templates/editModel.html
@@ -8,7 +8,7 @@
     {% include "breadcumb-level2.html" %}
 
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6 col-md-offset-3">
             <h3>Edit {{model.name}}</h3>
             <form action="{{ url_for('editModel', style_id = style.id, model_id = model.id)}}" method = "post">
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
@@ -16,26 +16,46 @@
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-addon">Name</span>
-                        <input type="text" class="form-control" name="name" value="{{model.name }}">
+                        <input type="text" class="form-control" name="name" value="{{model.name}}">
                     </div>
-                    <label for="description">Description:</label>
-                    <input type="text" class="form-control" name="description" value="{{model.description }}">
-                    <label for="price">Price:</label>
-                    <input type="text" class="form-control" name="price" value="{{model.price }}">
-                    <label for="Power">Power:</label>
-                    <input type="text" class="form-control" name="power" value="{{model.power }}">
+                </div>
 
+                <div class="form-group">
                     <div class="input-group">
-                        <span class="input-group-addon">Image</span>
-                        <input type="text" class="form-control" name="image" value="{{model.image }}">
+                        <span class="input-group-addon">Description</span>
+                        <textarea maxlength="250" class="form-control" name="description">{{model.description}}</textarea>
                     </div>
+                </div>
 
-                    <button type="submit" class="btn btn-default" id="submit" type="submit">
-                    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Save</button>
-                    <a href = "{{url_for('showModels', style_id = style.id)}}">
-                        <button class="btn btn-default delete">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">Price ($)</span>
+                        <input type="number" maxlength="10" class="form-control" name="price" value="{{model.price}}">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">HorsePower (CV)</span>
+                        <input type="number" maxlength="10" class="form-control" name="power" value="{{model.power}}">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">Image URL</span>
+                        <input type="url" maxlength="500" class="form-control" name="image" value="{{model.image}}">
+                    </div>
+                </div>
+
+                <div class="form-group pull-right">
+                    <a class="btn btn-default btn-danger" href="{{url_for('showModels', style_id = style.id)}}">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel
                     </a>
+
+                    <button type="submit" class="btn btn-success" id="submit" type="submit">
+                        <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Save
+                    </button>
                 </div>
             </form>
         </div>
