--- a/templates/editStyle.html
+++ b/templates/editStyle.html
@@ -3,26 +3,28 @@
 {% include "header.html" %}
 
     {% include "breadcumb-level1.html" %}
-    <div class="row banner menu">
-        <div class="col-md-11 col-md-offset-1 padding-none">
 
-        </div>
-    </div>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6 col-md-offset-3">
             <h3>Edit {{style.name}}</h3>
             <form action="{{ url_for('editStyle',style_id = style.id)}}" method = "post">
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
 
                 <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type ="text" class="form-control" name="name" value="{{style.name }}">
-                    <button type="submit" class="btn btn-default" id="submit" type="submit">
-                    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Save</button>
-                    <a href = "{{url_for('showStyles')}}">
-                        <button class="btn btn-default delete">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
+                    <div class="input-group">
+                        <span class="input-group-addon">Name</span>
+                        <input type="text" maxlength="80" class="form-control" name="name" value="{{style.name}}">
+                    </div>
+                </div>
+
+                <div class="form-group pull-right">
+                    <a class="btn btn-default btn-danger" href="{{url_for('showStyles')}}">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel
                     </a>
+
+                    <button type="submit" class="btn btn-success">
+                        <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Save
+                    </button>
                 </div>
             </form>
         </div>
