--- a/templates/newModel.html
+++ b/templates/newModel.html
@@ -5,29 +5,52 @@
     {% include "breadcumb-level1.html" %}
 
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6 col-md-offset-3">
             <h3>New Model</h3>
             <form action="#" method = "post">
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
+
                 <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type ="text" maxlength="50" class="form-control" name="name"placeholder="Name of the Model">
-
-                    <label for="description">Description:</label>
-                    <textarea class="form-control" maxlength="250" rows="3" name="description" placeholder="Description of the Bike"></textarea>
-
-                    <label for="price">Price:</label>
                     <div class="input-group">
-                        <div class="input-group-addon">$</div>
-                        <input type ="text" class="form-control" maxlength="10" name="price" placeholder="Price in $">
+                        <span class="input-group-addon">Name</span>
+                        <input type="text" maxlength="80" class="form-control" name="name">
                     </div>
-                    <label for="power">Power:</label>
-                    <input type ="text" maxlength="10" class="form-control" name="power"placeholder="Horsepower (CV)">
+                </div>
 
-                    <label for="name">Image URL:</label>
-                    <input type ="text" maxlength="500" class="form-control" name="image"placeholder="URL for the Model Image">
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">Description</span>
+                        <textarea maxlength="250" class="form-control" name="description"></textarea>
+                    </div>
+                </div>
 
-                    <button type="submit" class="btn btn-default" id="submit" type="submit">
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">Price ($)</span>
+                        <input type="number" maxlength="10" class="form-control" name="price">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">HorsePower (CV)</span>
+                        <input type="number" maxlength="10" class="form-control" name="power">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">Image URL</span>
+                        <input type="url" maxlength="500" class="form-control" name="image">
+                    </div>
+                </div>
+
+                <div class="form-group pull-right">
+                    <a class="btn btn-default btn-danger" href="{{url_for('showModels', style_id = style.id)}}">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel
+                    </a>
+
+                    <button type="submit" class="btn btn-success" id="submit" type="submit">
                         <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Create
                     </button>
                 </div>
