--- a/templates/newStyle.html
+++ b/templates/newStyle.html
@@ -5,15 +5,23 @@
     {% include "breadcumb-level0.html" %}
 
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6 col-md-offset-3">
             <h3>New Style</h3>
             <form action="#" method = "post">
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
 
                 <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type ="text" class="form-control" maxlength="100" name="name">
-                    <button type="submit" class="btn btn-default" id="submit" type="submit">
+                    <div class="input-group">
+                        <span class="input-group-addon">Name</span>
+                        <input type="text" maxlength="80" class="form-control" name="name">
+                    </div>
+                </div>
+                <div class="form-group pull-right">
+                    <a class="btn btn-default btn-danger" href="{{url_for('showStyles')}}">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel
+                    </a>
+
+                    <button type="submit" class="btn btn-success">
                         <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Create
                     </button>
                 </div>
