--- a/templates/notAllowed.html
+++ b/templates/notAllowed.html
@@ -2,20 +2,8 @@
 {% block content %}
 {% include "header.html" %}
 
-    <div class = 'flash'>
-        {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                <ul>
-                {% for message in messages %}
-                    <li> <strong> {{ message }} </strong> </li>
-                {% endfor %}
-                </ul>
-            {% endif %}
-        {% endwith %}
-    </div>
-
     <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-12">
             Not Allowed
         </div>
     </div>
