--- a/templates/styles.html
+++ b/templates/styles.html
@@ -15,15 +15,17 @@
     </div>
 
     {% for style in styles %}
-        <div class="row">
-            <div class="col-md-12">
-                <a href="{{url_for('showModels', style_id = style.id)}}">
-                    <h3>{{style.name}}</h3>
-                </a>
-                <a href="{{ url_for('editStyle', style_id = style.id) }}">edit</a>
-                <br>
-                <a href="{{ url_for('deleteStyle', style_id = style.id) }}">delete</a>
-            </div>
+
+    <div class="row">
+        <div class="col-md-6">
+            <h3>
+                <a href="{{url_for('showModels', style_id = style.id)}}">{{style.name}}</a>
+                <a class="btn btn-info btn-xs" href="{{ url_for('editStyle', style_id = style.id)}}" role="button">edit</a>
+                <a class="btn btn-danger btn-xs" href="{{ url_for('deleteStyle', style_id = style.id)}}" role="button">delete</a>
+            </h3>
         </div>
+    </div>
+    
     {% endfor %}
+
 {% endblock %}
