--- a/templates/newModel.html
+++ b/templates/newModel.html
@@ -26,7 +26,7 @@
 
                 <div class="form-group">
                     <div class="input-group">
-                        <span class="input-group-addon">Price ($)</span>
+                        <span class="input-group-addon">Price (€)</span>
                         <input type="number" maxlength="10" class="form-control" name="price">
                     </div>
                 </div>
